[package]
name = "proxy-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.8"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-openssl = "0.9.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
mockito = "0.31"
futures-channel = "0.3"